fix: open api cuentas
